Bug 403568 - Failed to open system configuration screen - monitor
Summary: Failed to open system configuration screen - monitor
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kcm (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2019-01-24 19:53 UTC by Regis Rodrigues
Modified: 2019-01-26 17:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regis Rodrigues 2019-01-24 19:53:35 UTC
Application: systemsettings5 (5.15.80)

Qt Version: 5.11.2
Frameworks Version: 5.54.0
Operating System: Linux 4.15.0-43-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
I was testing the new version of the plasma 15 in the kdeneon opening system configuration, when I opened monitor and screen, did not open appeared this error. Does not open, has been tested virtual box in the stable version of kdeneon

The crash can be reproduced every time.

-- Backtrace:
Application: Configurações do Sistema (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f466df96840 (LWP 1247))]

Thread 7 (Thread 0x7f462ca8a700 (LWP 1268)):
#0  0x00007f4669581bf9 in __GI___poll (fds=0x7f4628003ce0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f46628ce539 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f46628ce64c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4669ebc6eb in QEventDispatcherGlib::processEvents (this=0x7f4628000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f4669e609aa in QEventLoop::exec (this=this@entry=0x7f462ca89d40, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f4669c8c25a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f4667cb54f5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f4669c9717b in QThreadPrivate::start (arg=0x5556d98ddd60) at thread/qthread_unix.cpp:367
#8  0x00007f4664c8c6db in start_thread (arg=0x7f462ca8a700) at pthread_create.c:463
#9  0x00007f466958e88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f46352ee700 (LWP 1261)):
#0  0x00007f4669581bf9 in __GI___poll (fds=0x7f4630004a00, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f46628ce539 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f46628ce64c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4669ebc6eb in QEventDispatcherGlib::processEvents (this=0x7f4630000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f4669e609aa in QEventLoop::exec (this=this@entry=0x7f46352edd40, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f4669c8c25a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f4667cb54f5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f4669c9717b in QThreadPrivate::start (arg=0x5556d96ee860) at thread/qthread_unix.cpp:367
#8  0x00007f4664c8c6db in start_thread (arg=0x7f46352ee700) at pthread_create.c:463
#9  0x00007f466958e88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f4645dd6700 (LWP 1256)):
#0  0x00007f4664c929f3 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5556d95b6f88) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x5556d95b6f38, cond=0x5556d95b6f60) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x5556d95b6f60, mutex=0x5556d95b6f38) at pthread_cond_wait.c:655
#3  0x00007f464b6bbd5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f464b6bbbd7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f4664c8c6db in start_thread (arg=0x7f4645dd6700) at pthread_create.c:463
#6  0x00007f466958e88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f46465d7700 (LWP 1255)):
#0  0x00007f4664c929f3 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5556d95b6e20) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x5556d95b6dd0, cond=0x5556d95b6df8) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x5556d95b6df8, mutex=0x5556d95b6dd0) at pthread_cond_wait.c:655
#3  0x00007f464b6bbd5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f464b6bbbd7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f4664c8c6db in start_thread (arg=0x7f46465d7700) at pthread_create.c:463
#6  0x00007f466958e88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f465248b700 (LWP 1252)):
#0  __GI___errno_location () at errno-loc.c:26
#1  0x00007f46628ce541 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f46628ce64c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4669ebc6eb in QEventDispatcherGlib::processEvents (this=0x7f464c000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f4669e609aa in QEventLoop::exec (this=this@entry=0x7f465248ad30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f4669c8c25a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:525
#6  0x00007f466a303e45 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f4669c9717b in QThreadPrivate::start (arg=0x7f466a57bd60) at thread/qthread_unix.cpp:367
#8  0x00007f4664c8c6db in start_thread (arg=0x7f465248b700) at pthread_create.c:463
#9  0x00007f466958e88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f465a8b3700 (LWP 1250)):
#0  0x00007f4669581bf9 in __GI___poll (fds=0x7f465a8b2c68, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f4664850747 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f466485236a in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f465d249ed9 in QXcbEventReader::run (this=0x5556d939c400) at qxcbconnection.cpp:1391
#4  0x00007f4669c9717b in QThreadPrivate::start (arg=0x5556d939c400) at thread/qthread_unix.cpp:367
#5  0x00007f4664c8c6db in start_thread (arg=0x7f465a8b3700) at pthread_create.c:463
#6  0x00007f466958e88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f466df96840 (LWP 1247)):
[KCrash Handler]
#6  KScreen::BackendManager::loadBackendInProcess (this=0x5556d98a9cd0, name=...) at ./src/backendmanager.cpp:247
#7  0x00007f4625214780 in KScreen::ConfigOperationPrivate::loadBackend (this=this@entry=0x5556d98a6040) at ./src/configoperation.cpp:138
#8  0x00007f4625215bae in KScreen::GetConfigOperation::start (this=0x7f465400c550) at ./src/getconfigoperation.cpp:173
#9  0x00007f4669e92282 in QObject::event (this=0x7f465400c550, e=<optimized out>) at kernel/qobject.cpp:1251
#10 0x00007f466ae7ee1c in QApplicationPrivate::notify_helper (this=this@entry=0x5556d93aa8c0, receiver=receiver@entry=0x7f465400c550, e=e@entry=0x5556dad01f20) at kernel/qapplication.cpp:3727
#11 0x00007f466ae863ef in QApplication::notify (this=0x7ffe16932810, receiver=0x7f465400c550, e=0x5556dad01f20) at kernel/qapplication.cpp:3486
#12 0x00007f4669e62688 in QCoreApplication::notifyInternal2 (receiver=0x7f465400c550, event=event@entry=0x5556dad01f20) at kernel/qcoreapplication.cpp:1048
#13 0x00007f4669e651cd in QCoreApplication::sendEvent (event=0x5556dad01f20, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#14 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x5556d93a1fc0) at kernel/qcoreapplication.cpp:1745
#15 0x00007f4669e65788 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1599
#16 0x00007f4669ebd093 in postEventSourceDispatch (s=0x5556d9404990) at kernel/qeventdispatcher_glib.cpp:276
#17 0x00007f46628ce387 in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007f46628ce5c0 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007f46628ce64c in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007f4669ebc6cf in QEventDispatcherGlib::processEvents (this=0x5556d93fd0d0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#21 0x00007f465d2d5761 in QPAEventDispatcherGlib::processEvents (this=0x5556d93fd0d0, flags=...) at qeventdispatcher_glib.cpp:69
#22 0x00007f4669e609aa in QEventLoop::exec (this=this@entry=0x7ffe16932730, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#23 0x00007f4669e69b70 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1336
#24 0x00005556d8102e78 in main (argc=<optimized out>, argv=<optimized out>) at ./app/main.cpp:71

Reported using DrKonqi
Comment 1 Thiago Sueto 2019-01-26 14:33:48 UTC
Can reproduce, both from systemsettings5 and from kcmshell5 kcm_kscreen individually.
Gamma and Compositing KCMs are unaffected.
This seems to have happened after an update from the last three days, since I managed to change scaling through the KCM yesterday (25/01), either to 1.2 or 1.3.
This also seems to break the Kscreen's popup that is usually accessible through Meta+P.

Operating System: KDE neon Developer Edition (Git Unstable)
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-43-generic

I'm marking this crash as CONFIRMED (not sure if this is too hasty) and suggesting that this be marked as Major, as the ability to handle monitor settings and multi-screen setups is crucial.
Should I attach my backtrace as well?
Comment 2 David Edmundson 2019-01-26 17:58:08 UTC
Git commit 08d494c401cbd60830cecd2a4c60df889d65901c by David Edmundson.
Committed on 26/01/2019 at 17:57.
Pushed by davidedmundson into branch 'Plasma/5.15'.

Guard failing to load backend

Summary:
BackendManager::loadBackendPlugin can return a nullptr.
We currently use that pointer regardless.

The caller of this method ConfigOperationPrivate::loadBackend does
handle a nullptr and shows a relevant warning message.

Test Plan: Not done

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18508

M  +3    -0    src/backendmanager.cpp

https://commits.kde.org/libkscreen/08d494c401cbd60830cecd2a4c60df889d65901c
Comment 3 David Edmundson 2019-01-26 17:59:42 UTC
If we're in this path it means you failed to load the relevant kscreen backend.

It shouldn't have crashed, but we were already in a problem state.

Failing to load the backend is most likely some packaging situation rather than an upstream bug.