Guard failing to load backend

Summary:
BackendManager::loadBackendPlugin can return a nullptr.
We currently use that pointer regardless.

The caller of this method ConfigOperationPrivate::loadBackend does
handle a nullptr and shows a relevant warning message.

BUG: 403568

Test Plan: Not done

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18508